--- a/ManpreetBookStore/Views/Shared/_Layout.cshtml
+++ b/ManpreetBookStore/Views/Shared/_Layout.cshtml
@@ -28,11 +28,15 @@
                             <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         ﻿
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                        </li>
+                        ﻿
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                    Content Management
-                </a>
+                                Content Management
+                            </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">Action</a>
                                 <a class="dropdown-item" href="#">Another action</a>
