--- a/ManpreetBookStore/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/ManpreetBookStore/Areas/Admin/Views/CoverType/Index.cshtml
@@ -26,7 +26,7 @@
     <a href="/Admin/CoverType/Upsert/${data}" class="btn btn-success text-white" style="cursor:pointer">
         <i class="fas fa-edit"></i>&nbsp;
     </a>
-    <a onclick=Delete("/Admin/CoverType/Delete${data}" class="btn btn-danger text-white" style="cursor:pointer">
+    <a onclick=Delete("/Admin/CoverType/Delete/${data}" class="btn btn-danger text-white" style="cursor:pointer">
         <i class="fas fa-trash-alt"></i>&nbsp;
     </a>
 </div>
