--- a/ManpreetBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/ManpreetBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -1,18 +1,19 @@
-﻿@model ManpreetBooks.Models.Category;
-@{ Layout = "~/Views/Shared/_Layout.cshtml";
-                var title = "Create Category"; }
+﻿@model ManpreetBooks.Models.Category
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    var title = "Create Category";
+}
 
 <form method="post">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @if (Model.Id != 0)
         {
-            //edit
+            // edit
             title = "Edit Category";
         }
-
         <div class="col-12 border-bottom">
-            <h2 class="text-primary">TITLE</h2>
+            <h2 class="text-primary">@title</h2>
         </div>
         <div class="col-8 pt-4">
             <div class="form-group row">
@@ -28,16 +29,18 @@
                 <div class="col-8 offset-4">
                     @if (Model.Id != 0)
                     {
-        <partial name="_EditAndBackToListButton" model="Model.Id" /> }
+                        <partial name="_EditAndBackToListButton" model="Model.Id" />
+                    }
                     else
                     {
-        <partial name="_CreateAndBackToListButton" />}
+                        <partial name="_CreateAndBackToListButton" />
+                    }
                 </div>
             </div>
         </div>
     </div>
 </form>
 
-@section Scripts{ 
-<partial name="_ValidationScriptsPartial"/>
-         }
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
